删除了数据校验的节点以及mock数据
